--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
             <li><a href="contact.asp">Privacy</a></li>
         </ul>
     </div>
-
+    <div class="img">
+        <img src="google.gif" alt="google" width="50%" height="50%">
+    </div>
     <div class="bottomnavleft">
         <ul>
             <li><a href="about.asp">About</a></li>
@@ -36,7 +38,17 @@
             <li><a href="about.asp">How Search Works</a></li>
         </ul>
     </div>
-
+    <div class="search">
+        <input type="text" placeholder="Type to search">
+    </div>
+    <div class="but">
+    <button>
+        Search
+    </button>
+    <button>
+        I am feeling lucky
+    </button>
+</div>
 </body>
 
 </html>
